--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/originals/7a/7b/eb/7a7beb6f0b118ca1a2bc76822212839e.png" alt="man-technologyst">
-  <title>Lohit's Portfolio</title>
+  <title>FullStackDev</title>
 </head>
 <body>
   <noscript>
